// Attributed description
message AltDescription
 {
  optional description String = 1
  optional source String = 2
 }
// A class or interface
message ClassDefinition
 {
  optional name String = 1
  optional singularName String = 2
  optional description String = 3
  optional note String = 4
  optional comment String = 5
  repeated examples Example = 6
  optional seeAlso String = 7
  repeated flags String = 8
  repeated aliases String = 9
  repeated mappings String = 10
  repeated idPrefixes String = 11
  repeated inSubset String = 12
  optional fromSchema String = 13
  repeated altDescriptions AltDescription = 14
  repeated exactMatches String = 15
  repeated broaderMatches String = 16
  repeated narrowerMatches String = 17
  repeated closeMatches String = 18
  optional mixin Boolean = 19
  optional abstract Boolean = 20
  repeated localNames String = 21
  optional subclassOf Uri = 22
  repeated valuesFrom String = 23
  optional symmetric Boolean = 24
  repeated definingSlots SlotDefinition = 25
  repeated slots SlotDefinition = 26
  repeated slotUsage SlotDefinition = 27
  optional applyTo ClassDefinition = 28
  optional entity Boolean = 29
  optional isA ClassDefinition = 30
  repeated mixins ClassDefinition = 31
  repeated unionOf ClassDefinition = 32
 }
// example of usage
message Example
 {
  optional value String = 1
  optional description String = 2
 }
// Prefix URI map
message Prefix
 {
  optional localName String = 1
  optional prefixUri String = 2
 }
// A collection of definitions
message SchemaDefinition
 {
  optional name String = 1
  optional singularName String = 2
  optional description String = 3
  optional note String = 4
  optional comment String = 5
  repeated examples Example = 6
  optional seeAlso String = 7
  repeated flags String = 8
  repeated aliases String = 9
  repeated mappings String = 10
  repeated idPrefixes String = 11
  repeated inSubset String = 12
  optional fromSchema String = 13
  repeated altDescriptions AltDescription = 14
  repeated exactMatches String = 15
  repeated broaderMatches String = 16
  repeated narrowerMatches String = 17
  repeated closeMatches String = 18
  optional isA Definition = 19
  optional mixin Boolean = 20
  repeated mixins Definition = 21
  optional abstract Boolean = 22
  repeated localNames String = 23
  repeated unionOf Definition = 24
  optional subclassOf Uri = 25
  repeated valuesFrom String = 26
  optional symmetric Boolean = 27
  optional id String = 28
  optional version String = 29
  repeated imports String = 30
  optional license String = 31
  repeated prefixes Prefix = 32
  optional defaultPrefix String = 33
  optional defaultType TypeDefinition = 34
  repeated defaultCuriMaps String = 35
  repeated types TypeDefinition = 36
  repeated slots SlotDefinition = 37
  repeated classes ClassDefinition = 38
  optional metamodelVersion String = 39
  optional sourceFile String = 40
  optional sourceFileSize Integer = 41
  optional sourceFileDate String = 42
  optional generationDate Date = 43
 }
// A property or slot
message SlotDefinition
 {
  optional name String = 1
  optional singularName String = 2
  optional description String = 3
  optional note String = 4
  optional comment String = 5
  repeated examples Example = 6
  optional seeAlso String = 7
  repeated flags String = 8
  repeated aliases String = 9
  repeated mappings String = 10
  repeated idPrefixes String = 11
  repeated inSubset String = 12
  optional fromSchema String = 13
  repeated altDescriptions AltDescription = 14
  repeated exactMatches String = 15
  repeated broaderMatches String = 16
  repeated narrowerMatches String = 17
  repeated closeMatches String = 18
  optional mixin Boolean = 19
  optional abstract Boolean = 20
  repeated localNames String = 21
  optional subclassOf Uri = 22
  repeated valuesFrom String = 23
  optional symmetric Boolean = 24
  optional multivalued Boolean = 25
  optional domain ClassDefinition = 26
  optional range Anytype = 27
  optional required Boolean = 28
  optional objectProperty Boolean = 29
  optional inlined Boolean = 30
  optional primaryKey Boolean = 31
  optional identifier Boolean = 32
  optional definitional Boolean = 33
  optional alias String = 34
  optional path String = 35
  optional subpropertyOf SlotDefinition = 36
  optional inverse SlotDefinition = 37
  optional isClassField Boolean = 38
  optional role String = 39
  optional inherited Boolean = 40
  optional isA SlotDefinition = 41
  repeated mixins SlotDefinition = 42
  repeated unionOf SlotDefinition = 43
 }
// A type definition
message TypeDefinition
 {
  optional name String = 1
  optional singularName String = 2
  optional description String = 3
  optional note String = 4
  optional comment String = 5
  repeated examples Example = 6
  optional seeAlso String = 7
  repeated flags String = 8
  repeated aliases String = 9
  repeated mappings String = 10
  repeated idPrefixes String = 11
  repeated inSubset String = 12
  optional fromSchema String = 13
  repeated altDescriptions AltDescription = 14
  repeated exactMatches String = 15
  repeated broaderMatches String = 16
  repeated narrowerMatches String = 17
  repeated closeMatches String = 18
  optional typeof String = 19
 }

